// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event Component renders a blank page when no event 1`] = `
<body>
  <div>
    <div
      class="Event"
    >
      <nav
        class="Nav"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
        <a
          href="/org-search"
        >
          Search Organizations
        </a>
        <a
          href="/event-search"
        >
          Search Events
        </a>
        <a
          href="/account"
        >
          Account
        </a>
        <a
          href="/"
        >
          Logout
        </a>
      </nav>
      <p>
        No event found
      </p>
    </div>
  </div>
</body>
`;

exports[`Event Component renders the UI as expected 1`] = `
<body>
  <div>
    <div
      class="Event"
    >
      <nav
        class="Nav"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          Home
        </a>
        <a
          href="/org-search"
        >
          Search Organizations
        </a>
        <a
          href="/event-search"
        >
          Search Events
        </a>
        <a
          href="/login"
        >
          Login
        </a>
        <a
          href="/signup"
        >
          Sign Up
        </a>
      </nav>
      <header>
        <h1>
          Member Appreciation Day
        </h1>
      </header>
      <section>
        <header>
          <h2>
            Event Info
          </h2>
        </header>
        <p>
          Organization: 
          <a
            href="/org/1"
          >
            YMCA DC
          </a>
        </p>
        <p>
          Location: 
          Reston YMCA Center
        </p>
        <p>
          Date: 
          February 20, 2020
        </p>
        <p>
          Duration: 
          4 hours
        </p>
        <p>
          Greet YMCA members as they enter the facility and offer them snacks.  See https://www.website.com for more details.
        </p>
        <p
          class="Event__passed"
        >
          This event has passed
        </p>
      </section>
      <section>
        <header>
          <h2>
            Causes
          </h2>
        </header>
        <ul
          class="Event__causes"
        >
          <li>
            Health
          </li>
          <li>
            Elderly
          </li>
        </ul>
      </section>
      <section>
        <header>
          <h2>
            Tags
          </h2>
        </header>
        <p
          class="Event__tags"
        >
          in-person, weekdays, greeting
        </p>
      </section>
      <p>
        Created By: 
        <a
          href="/user/1"
        >
          user1
        </a>
      </p>
    </div>
  </div>
</body>
`;
